--- a/src/app/components/shooping/compra-nuevo/compra-nuevo.component.html
+++ b/src/app/components/shooping/compra-nuevo/compra-nuevo.component.html
@@ -1,1 +1,48 @@
-<p>compra-nuevo works!</p>
+<div style="max-width: 95%; margin: auto">
+    <div class="dialog-content">
+        <div class="btn-cerrar">
+            <fa-icon [icon]="faTimes" class="btn btn-danger" [size]="'lg'" data-toggle="tooltip"
+                data-placement="bottom" title="Regresar a pedidos" (click)="cerrarDialog()">
+            </fa-icon>
+        </div>
+    </div>
+    <br>
+            <br/><br/>
+            <div class="table-container">
+            <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover">
+                <thead style="color: #636363;">
+                    <tr>
+                        <th style="width: 20%; ">PRODUCTO</th>
+                        <th style="width: 20%; ">NOMBRE</th>
+                        <th style="width: 20%; ">CANTIDAD</th>
+                        <th style="width: 20%; ">PVP</th>
+                        <th style="width: 20%; "></th>
+                    </tr>
+                </thead>
+                <tbody style="color: #767695;">
+                    <tr *ngFor="let producto of lstProductos" class="table-row">
+                        <td>{{producto.id}}</td>
+                        <td>{{producto.nombre}}</td>
+                        <td>
+                            <input class="cool-input" (input)="onInput($event)" *ngIf="true" type="text" [(ngModel)]="producto.cantidad" />
+                        </td>
+                        <td>{{producto.pvp}}</td>
+                        <td style="text-align: center;">
+                            <a class="btn button" (click)=" crearDetalle(producto)"
+                                style="border-radius: 5px; 
+                                       background: rgb(49,99,173,0.8); 
+                                       font-size: 15px; width:120px; 
+                                       height:35px;
+                                       text-align:center; 
+                                       margin-top: 10px;
+                                       ">
+                                <span style="color:white;">
+                                        AÑADIR
+                                </span>
+                            </a>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+</div>
