--- a/src/app/components/shooping/menucompr/menucompr.component.html
+++ b/src/app/components/shooping/menucompr/menucompr.component.html
@@ -1,1 +1,95 @@
-<p>menucompr works!</p>
+<div style="max-width: 95%; margin: auto">
+    <div class="card">
+        <br />
+        <div class="card-header d-flex justify-content-between">
+            <div class="row mx-3">
+                <fa-icon [icon]="faShoppingBag" [size]="'3x'" style="color: #636363"></fa-icon>
+                <h1 class="mx-5" style="color: #636363">FACTURACIÓN</h1>
+            </div>
+        </div>
+        <div class="card-body">
+            <div class="row mx-3">
+                <a class="btn button" href="./navegation-cl/(contentClient:ventaprov)" style="text-align:center;
+                            font-size: 15px; width:140px; 
+                               height:35px;
+                               text-align:center; 
+                               margin-top: 10px;
+                               background: rgb(54,169,225,0.8);"><span style="color: white;">
+                        Volver
+                    </span>
+                </a>
+            </div>
+            <div class="d-flex justify-content-end">
+                <button class="btn button carrito-button" (click)="verCarrito()">
+                    <fa-icon [icon]="faShoppingCart" [size]="'lg'" style="color: #ffffff"></fa-icon>
+                    - AÑADIR
+                </button>
+            </div>
+            <br><br>
+            <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover">
+                <thead style="color: #636363;">
+                    <tr>
+                        <th style="width: 10%; ">Producto</th>
+                        <th style="width: 10%; ">Cantidad</th>
+                        <th style="width: 10%; ">Precio Uni.</th>
+                        <th style="width: 10%; ">Precio</th>
+                        <th style="width: 10%; ">Tamaño</th>
+                        <th style="width: 10%; ">Color</th>
+                        <th style="width: 20%; "></th>
+                    </tr>
+                </thead>
+                <tbody style="color: #767695;">
+                    <tr *ngFor="let detalleMovimientos of lstDetalleMovimientos; let i = index">
+                        <td>{{detalleMovimientos.producto_nombre}}</td>
+                        <td>
+                            <ng-container *ngIf="!editarDetalle || i !== detalleEditIndex">
+                                {{detalleMovimientos.cantidad}}
+                            </ng-container>
+                            <input class="small-input" (input)="onInput($event)"
+                                *ngIf="editarDetalle && i === detalleEditIndex" type="text"
+                                [(ngModel)]="detalleMovimientos.cantidad" (ngModelChange)="calcularPrecio(i)">
+                        </td>
+                        <td>
+                            <ng-container *ngIf="!editarDetalle || i !== detalleEditIndex">
+                                {{detalleMovimientos.costo}}
+                            </ng-container>
+                            <input class="small-input" (input)="onInput2($event)"
+                                *ngIf="editarDetalle && i === detalleEditIndex" type="text"
+                                [(ngModel)]="detalleMovimientos.costo" (ngModelChange)="calcularPrecio(i)">
+                        </td>
+                        <td>{{detalleMovimientos.precio}}</td>
+                        <td>{{detalleMovimientos.tamanio}}</td>
+                        <td>{{detalleMovimientos.color}}</td>
+                        <td style="text-align: center;">
+                            <ng-container *ngIf="!editarDetalle || i !== detalleEditIndex">
+                                <fa-icon [icon]="faEdit" class="btn btn-info" [size]="'lg'" style="margin-right: 5px;"
+                                    data-placement="bottom" (click)="editarDetalleMovimiento(i)"
+                                    title="Editar Detalle"></fa-icon>
+                            </ng-container>
+                            <ng-container *ngIf="editarDetalle && i === detalleEditIndex">
+                                <fa-icon [icon]="faCheck" class="btn btn-success" [size]="'lg'"
+                                    style="margin-right: 5px;" data-placement="bottom"
+                                    (click)="aplicarCambiosDetalle(i)" title="Aplicar"></fa-icon>
+                            </ng-container>
+                            <fa-icon [icon]="faTrashAlt" class="btn btn-danger" [size]=" 'lg' " data-placement="bottom"
+                                (click)=" eliminarDetalle(detalleMovimientos)"
+                                title="Eliminar Modelo Producto"></fa-icon>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+            <br>
+            <div class="icon-container">
+                <fa-icon [icon]="faMoneyBillAlt" [size]="'3x'" style="color: #6aaf42" class="icono-input"></fa-icon>
+                <label for="total" class="label-input">TOTAL:</label>
+                <input type="text" [(ngModel)]="sumaTotal" class="cool-input resultado-input" readonly>
+            </div>
+            <br><br><br>
+            <div class="button-container" *ngIf="lstDetalleMovimientos.length > 0">
+                <button class="btn btn-primary" (click)="finalizarPedido()">
+                    <span style="color: white"> Finalizar Compra </span>
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
