--- a/src/app/components/navegation-cl/navegation-cl.component.html
+++ b/src/app/components/navegation-cl/navegation-cl.component.html
@@ -18,7 +18,7 @@
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Transacciones</font>
             </a>
             <div *ngIf="transaccionesExpandidas" class="subitem-menu">
-                <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['menucompr'] } }]" style="color: white">
+                <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['almacenesshooping'] } }]" style="color: white">
                     <span class="material-icons-outlined" style="font-size: 20px">shopping_cart</span>
                     <font style="font-size: 12px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Compras</font>
                 </a>
