--- a/src/app/components/sales/menuvent/menuvent.component.html
+++ b/src/app/components/sales/menuvent/menuvent.component.html
@@ -26,27 +26,32 @@
                 </button>
             </div>
             <form [formGroup]="clienteForm">
-            <div class="form-group">
-                <label for="tipo">Tipo de Cliente</label>
-                <div class="d-flex">
-                    <select class="form-control small-select" (change)="changeGroup($event)" formControlName="tipo">
-                        <option value="0" selected>Seleccione un tipo de cliente</option>
-                        <option>
-                            CONSUMIDOR FINAL
-                        </option>
-                        <option>
-                            CLIENTE
-                        </option>
-                    </select>
-                    <button class="btn btn-primary ml-2" (click)="realizarAccion()">ELEGIR</button>
-                </div>
-                <small *ngIf="selectTipo">
-                    <small *ngIf="selectTipo" style="color: red; ">
-                        Debe seleccionar una categoría.
+                <div class="form-group">
+                    <div class="d-flex">
+                        <select class="form-control small-select" (change)="changeGroup($event)" formControlName="tipo">
+                            <option value="0" selected>Seleccione un tipo de cliente</option>
+                            <option>
+                                CONSUMIDOR FINAL
+                            </option>
+                            <option>
+                                CLIENTE
+                            </option>
+                        </select>
+                        <button class="btn btn-primary ml-2" (click)="realizarAccion()">ELEGIR</button>
+                        <select class="form-control small-select" style="margin-left: 150px;">
+                            <option value="0" selected>Seleccionar método de pago</option>
+                            <option>Tarjeta de Débito/Crédito</option>
+                            <option>Efectivo</option>
+                            <option>Tarjeta de Regalo</option>
+                          </select>
+                    </div>
+                    <small *ngIf="selectTipo">
+                        <small *ngIf="selectTipo" style="color: red; ">
+                            Debe seleccionar una categoría.
+                        </small>
                     </small>
-                </small>
-            </div>
-        </form>
+                </div>
+            </form>
             <br><br>
             <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover">
                 <thead style="color: #636363;">
