--- a/src/app/components/shooping/menucompr/menucompr.component.css
+++ b/src/app/components/shooping/menucompr/menucompr.component.css
@@ -22,6 +22,7 @@
 .small-select {
   width: 250px;
   height: 40px;
+  margin-right: 10px;
 }
 
 .icon-container {
@@ -69,7 +70,7 @@
   max-height: 400px; /* Ajusta este valor según tus necesidades */
   max-width: 750px;
   overflow-y: auto;
-  overflow-x: hidden;
+  overflow-x: auto;
 }
 
 /* Estilos personalizados para el scrollbar */
@@ -98,6 +99,12 @@ font-size: 12px; /* Ajusta el tamaño de fuente según tus necesidades */
 border: 1px solid #35b0e9;
 }
 
+.input-1 {
+  width: 250px; /* Ajusta el ancho según tus necesidades */
+  border: 1px solid #a5b9c2;
+  border-radius: 5px;
+  }
+
 .button-container button {
 margin-bottom: 10px; /* Margen inferior entre los botones */
 }
@@ -109,4 +116,15 @@ text-align: center;
 
 .d-flex {
   display: flex;
+}
+
+.combobox-container {
+  position: relative;
+}
+
+.combobox-dropdown {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
 }
