Avance Nuevo Prod

--- a/src/app/components/shooping/menucompr/menucompr.component.html
+++ b/src/app/components/shooping/menucompr/menucompr.component.html
@@ -20,6 +20,10 @@
                 </a>
             </div>
             <div class="d-flex justify-content-end">
+                <button class="btn button boton-adicional" (click)="nuevoProducto()">
+                    <fa-icon [icon]="faPlus" [size]="'lg'" style="color: #ffffff"></fa-icon>
+                    CREAR
+                </button>
                 <button class="btn button carrito-button" (click)="verCarrito()">
                     <fa-icon [icon]="faShoppingCart" [size]="'lg'" style="color: #ffffff"></fa-icon>
                     - AÑADIR
