--- a/src/app/components/navegation-adm/navegation-adm.component.html
+++ b/src/app/components/navegation-adm/navegation-adm.component.html
@@ -52,6 +52,10 @@
                 <span class="material-icons-outlined" style="font-size: 24px">person</span>
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Grupos</font>
             </a>
+            <a mat-list-item [routerLink]="[{ outlets: { contentAdmin: ['proveedores'] } }]" style="color: white">
+                <span class="material-icons-outlined" style="font-size: 24px">supervisor_account</span>
+                <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Proveedores</font>
+            </a>
             <a mat-list-item [routerLink]="[{ outlets: { contentAdmin: ['sociedades'] } }]" style="color: white">
                 <span class="material-icons-outlined" style="font-size: 24px">supervisor_account</span>
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sociedades</font>
