--- a/src/app/components/marks/marcas-create/marcas-create.component.html
+++ b/src/app/components/marks/marcas-create/marcas-create.component.html
@@ -5,7 +5,8 @@
                 <fa-icon [icon]="faBookmark" [size]="'3x'" style="color: #636363;"></fa-icon>
                 <h1 class="mx-5 " style="color: #636363;">Agregar Marcas</h1>
                 <div style="position: absolute;right:0;" class="mx-3">
-                    <fa-icon [icon]="faTimes" class="btn btn-danger" [size]="'lg'" data-toggle="tooltip" data-placement="bottom" title="Regresar a marcas" (click)="visualizarMarcas()"></fa-icon>
+                    <fa-icon [icon]="faTimes" class="btn btn-danger" [size]="'lg'" data-toggle="tooltip"
+                        data-placement="bottom" title="Regresar a marcas" (click)="visualizarMarcas()"></fa-icon>
                 </div>
             </div>
         </div>
@@ -15,33 +16,53 @@
                     <td style="width: 60%;">
                         <form [formGroup]="markForm" (ngSubmit)="onSubmit()">
                             <div class="form-group">
+                                <label for="proveedor">Proveedores</label>
+                                <select class="form-control" (change)="changeGroup($event)" [disabled]="true" formControlName="proveedor">
+                                    <option value="0" selected>Seleccione un proveedor</option>
+                                    <option *ngFor="let proveedor of lstProveedores" [value]="proveedor.nombre">
+                                        {{proveedor.nombre}}
+                                    </option>
+                                </select>
+                                <small *ngIf="selectProveedor">
+                                    <small *ngIf="selectProveedor" style="color: red; ">
+                                        Debe seleccionar un proveedor.
+                                    </small>
+                                </small>
+                            </div>
+                            <div class="form-group">
                                 <label for="atributo">Marca</label>
-                                <input type="text" class="form-control" id="atributo" placeholder="Ingrese el nombre de la marca" formControlName="marca">
-                                <small *ngIf="markForm.controls['marca'].invalid && (markForm.controls['marca'].dirty || markForm.controls['marca'].touched)">
-                                    <small  *ngIf="markForm.controls['marca'].errors" style="color: red;">
+                                <input type="text" class="form-control" id="atributo"
+                                    placeholder="Ingrese el nombre de la marca" formControlName="marca">
+                                <small
+                                    *ngIf="markForm.controls['marca'].invalid && (markForm.controls['marca'].dirty || markForm.controls['marca'].touched)">
+                                    <small *ngIf="markForm.controls['marca'].errors" style="color: red;">
                                         Debe ingresar el nombre de la marca
-                                    </small >
-                                </small >
+                                    </small>
+                                </small>
                             </div>
                             <div class="form-group">
                                 <label for="etiquetas">Etiquetas</label>
-                                <input type="text" class="form-control" id="etiquetas" placeholder="Ingrese las etiquetas" formControlName="etiquetas">
-                                <small *ngIf="markForm.controls['etiquetas'].invalid && (markForm.controls['etiquetas'].dirty || markForm.controls['etiquetas'].touched)">
-                                    <small  *ngIf="markForm.controls['etiquetas'].errors" style="color: red;">
+                                <input type="text" class="form-control" id="etiquetas"
+                                    placeholder="Ingrese las etiquetas" formControlName="etiquetas">
+                                <small
+                                    *ngIf="markForm.controls['etiquetas'].invalid && (markForm.controls['etiquetas'].dirty || markForm.controls['etiquetas'].touched)">
+                                    <small *ngIf="markForm.controls['etiquetas'].errors" style="color: red;">
                                         Debe ingresar etiquetas.
-                                    </small >
-                                </small >
+                                    </small>
+                                </small>
                             </div>
                             <div class="form-group">
                                 <label for="etiquetas">Imagen Marca</label>
                                 <br>
                                 <!-- <input type="text" class="form-control" id="etiquetas" placeholder="Ingrese las etiquetas" formControlName="etiquetas"> -->
-                                <input type="file"  accept="image/*" (change)="onChangeFile($event.target)" class="form-control" style="padding: 0px;"  formControlName="urlImagen"> 
-                                <small *ngIf="markForm.controls['urlImagen'].invalid && (markForm.controls['urlImagen'].dirty || markForm.controls['urlImagen'].touched)">
-                                    <small  *ngIf="markForm.controls['urlImagen'].errors" style="color: red;">
+                                <input type="file" accept="image/*" (change)="onChangeFile($event.target)"
+                                    class="form-control" style="padding: 0px;" formControlName="urlImagen">
+                                <small
+                                    *ngIf="markForm.controls['urlImagen'].invalid && (markForm.controls['urlImagen'].dirty || markForm.controls['urlImagen'].touched)">
+                                    <small *ngIf="markForm.controls['urlImagen'].errors" style="color: red;">
                                         Debe seleccionar imágen
-                                    </small >
-                                </small >
+                                    </small>
+                                </small>
                             </div>
                             <button type="submit" class="btn btn-primary"><!--[disabled]="!this.groupForm.valid"-->
                                 <fa-icon [icon]="faSave" [size]="'sm'"></fa-icon>
@@ -51,7 +72,7 @@
                     </td>
                     <td style="width: 5%;"></td>
                     <td style="width: 30%;text-align: center;">
-                        <img src={{imageUrl}} alt="Imágen Marca" class="img-thumbnail"/>
+                        <img src={{imageUrl}} alt="Imágen Marca" class="img-thumbnail" />
                     </td>
                     <td style="width: 5%;"></td>
                 </tr>
