--- a/src/app/components/providers/proveedores/proveedores.component.html
+++ b/src/app/components/providers/proveedores/proveedores.component.html
@@ -33,9 +33,9 @@
                     <td style="text-align: center;">
                         <fa-icon [icon]="faEdit" class="btn btn-info" [size]="'lg'" style="margin-right: 5px;"
                             data-placement="bottom" title="Editar Modelo Producto"
-                            (click)=" editarProducto(proveedor) "></fa-icon>
+                            (click)=" editarProveedor(proveedor) "></fa-icon>
                         <fa-icon [icon]="faTrashAlt " class="btn btn-danger " [size]=" 'lg' " data-placement="bottom "
-                            title="Eliminar Modelo Producto" (click)="eliminarProducto(proveedor)"></fa-icon>
+                            title="Eliminar Modelo Producto" (click)="eliminarProveedor(proveedor)"></fa-icon>
                     </td>
                 </tr>
             </tbody>
