--- a/src/app/components/marks/marcas/marcas.component.html
+++ b/src/app/components/marks/marcas/marcas.component.html
@@ -16,6 +16,7 @@
                         <th style="width: 20%; "></th>
                         <th style="width: 30%; ">Marca</th>
                         <th style="width: 30%; ">Etiquetas</th>
+                        <th style="width: 30%; ">Proveedor</th>
                         <th style="width: 20%; "></th>
                     </tr>
                 </thead>
@@ -26,6 +27,7 @@
                         </td>
                         <td>{{marca.marca}}</td>
                         <td>{{marca.etiquetas}}</td>
+                        <td>{{marca.proveedor}}</td>
                         <td style="text-align: center;">
                             <fa-icon [icon]="faEdit" class="btn btn-info" [size]="'lg'" style="margin-right: 5px;" data-placement="bottom" title="Editar marca" (click)="editarMarcas(marca)"></fa-icon>
                             <fa-icon [icon]="faTrashAlt" class="btn btn-danger" [size]="'lg'" data-placement="bottom" title="Eliminar marca" (click)="eliminarMarcas(marca)"></fa-icon>
