--- a/src/app/components/navegation-cl/navegation-cl.component.html
+++ b/src/app/components/navegation-cl/navegation-cl.component.html
@@ -1,5 +1,6 @@
 <mat-sidenav-container class="sidenav-container">
-    <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'" [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
+    <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
+        [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
 
         <div align="center">
             <br>
@@ -18,11 +19,13 @@
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Transacciones</font>
             </a>
             <div *ngIf="transaccionesExpandidas" class="subitem-menu">
-                <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['almacenesshooping'] } }]" style="color: white">
+                <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['almacenesshooping'] } }]"
+                    style="color: white">
                     <span class="material-icons-outlined" style="font-size: 20px">shopping_cart</span>
                     <font style="font-size: 12px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Compras</font>
                 </a>
-                <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['almacenegresos'] } }]" style="color: white">
+                <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['almacenegresos'] } }]"
+                    style="color: white">
                     <span class="material-icons-outlined" style="font-size: 20px">payment</span>
                     <font style="font-size: 12px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ventas</font>
                 </a>
@@ -30,12 +33,14 @@
                     <span class="material-icons-outlined" style="font-size: 20px">monetization_on</span>
                     <font style="font-size: 12px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Cuentas</font>
                 </a>
-              </div>
-            <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['inventarios-productos'] } }]" style="color: white">
+            </div>
+            <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['inventarios-productos'] } }]"
+                style="color: white">
                 <span class="material-icons-outlined" style="font-size: 24px">apps</span>
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Productos</font>
             </a>
-            <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['inventarios-almacen'] } }]" style="color: white">
+            <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['inventarios-almacen'] } }]"
+                style="color: white">
                 <span class="material-icons-outlined" style="font-size: 24px">apps</span>
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Inventarios</font>
             </a>
@@ -47,16 +52,15 @@
                 <span class="material-icons-outlined" style="font-size: 24px">shopping_cart</span>
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Plasticaucho</font>
             </a>
-
-            <a mat-list-item href="#" style="color: white">
+            <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['movimientos'] } }]" style="color: white">
                 <span class="material-icons-outlined" style="font-size: 24px">monitor</span>
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Movimientos</font>
             </a>
-            <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['almacenes'] } }]"style="color: white">
+            <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['almacenes'] } }]" style="color: white">
                 <span class="material-icons-outlined" style="font-size: 24px">location_city</span>
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Almacenes</font>
             </a>
-            <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['tercerosalmacen'] } }]"style="color: white">
+            <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['tercerosalmacen'] } }]" style="color: white">
                 <span class="material-icons-outlined" style="font-size: 24px">person</span>
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Usuarios</font>
             </a>
