--- a/src/app/components/sales/menuvent/menuvent.component.html
+++ b/src/app/components/sales/menuvent/menuvent.component.html
@@ -37,13 +37,7 @@
                                 CLIENTE
                             </option>
                         </select>
-                        <button class="btn btn-primary ml-2" (click)="realizarAccion()">ELEGIR</button>
-                        <select class="form-control small-select" style="margin-left: 150px;">
-                            <option value="0" selected>Seleccionar método de pago</option>
-                            <option>Tarjeta de Débito/Crédito</option>
-                            <option>Efectivo</option>
-                            <option>Tarjeta de Regalo</option>
-                          </select>
+                        <button class="btn btn-primary ml-2" (click)="realizarAccion()" [disabled]="lstDetalleMovimientos.length > 0">ELEGIR</button>
                     </div>
                     <small *ngIf="selectTipo">
                         <small *ngIf="selectTipo" style="color: red; ">
@@ -112,8 +106,8 @@
                 <input type="text" [(ngModel)]="sumaTotal" class="cool-input resultado-input" readonly>
             </div>
             <br><br><br>
-            <div class="button-container" *ngIf="lstDetalleMovimientos.length > 0">
-                <button class="btn btn-primary" (click)="finalizarPedido()">
+            <div class="button-container">
+                <button class="btn btn-primary" [disabled]="lstDetalleMovimientos.length == 0" (click)="finalizarPedido()">
                     <span style="color: white"> Finalizar Compra </span>
                 </button>
             </div>
