--- a/src/app/components/sales/ver-carrito/ver-carrito.component.html
+++ b/src/app/components/sales/ver-carrito/ver-carrito.component.html
@@ -16,6 +16,7 @@
                         <th style="width: 20%; ">NOMBRE</th>
                         <th style="width: 20%; ">CANTIDAD</th>
                         <th style="width: 20%; ">PVP</th>
+                        <th style="width: 20%; ">TARIFA</th>
                         <th style="width: 20%; ">STOCK ACTUAL</th>
                         <th style="width: 20%; "></th>
                     </tr>
@@ -28,6 +29,7 @@
                             <input class="cool-input" (input)="onInput($event)" *ngIf="true" type="text" [(ngModel)]="inventario.cantidad" />
                         </td>
                         <td>{{inventario.pvp2}}</td>
+                        <td>{{inventario.tarifa_ice_iva}}</td>
                         <td>{{ inventario.stock | number: '.0-0' }}</td>
                         <td style="text-align: center;">
                             <a class="btn button" (click)=" crearDetalle(inventario)"
